--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <table cellspacing="20">
-    <td><img src="C:\Users\hp\Documents\Web Development\HTML - Personal Site\pic.jpg" height="200" alt="Saurabh Profile Picture"></td>
+    <td><img src="pic.jpg" height="200" alt="Saurabh Profile Picture"></td>
     <td>
       <h1>Saurabh Chouhan</h1>
       <p><em>A College Pre-Final Year Student</em></p>
